[package]
name = "rastra"
version = "0.1.2"
edition = "2024"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
python = ["dep:pyo3", "dep:numpy"]
python-extension = ["python", "pyo3/extension-module", "pyo3/abi3-py311"]

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"], optional = true }
numpy = { version = "0.28", optional = true }
