[project]
name = "rustronomy"
version = "0.1.1"
description = "Rust library for tracing 2D field lines with optional Python bindings"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GiMattia" }]
keywords = ["rust", "python", "pyo3", "field-lines", "scientific-computing"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Rust",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/GiMattia/rustronomy"
Repository = "https://github.com/GiMattia/rustronomy"
Issues = "https://github.com/GiMattia/rustronomy/issues"

[tool.maturin]
bindings = "pyo3"
features = ["python-extension"]
module-name = "rustronomy"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
