[project]
name = "rastra"
version = "0.1.2"
description = "Rust library for tracing 2D field lines with optional Python bindings"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GiMattia" }]
license = "BSD-3-Clause"
keywords = ["rust", "python", "pyo3", "field-lines", "scientific-computing"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: BSD License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Rust",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/GiMattia/rastra"
Repository = "https://github.com/GiMattia/rastra"
Issues = "https://github.com/GiMattia/rastra/issues"

[tool.maturin]
bindings = "pyo3"
features = ["python-extension"]
module-name = "rastra"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
